<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZakatProcess">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEB3B"
        android:orientation="vertical"
        android:paddingLeft="16dip"
        android:paddingRight="16dip">

        <EditText
            android:id="@+id/titlepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/weightgold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weightgold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Instructions :"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/formula1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/formula1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/formula2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/formula2"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/formula3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/formula3"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/stepone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/process1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editweightgold"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Weight (g)"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editvaluegold"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="-45dip"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Value per (g)"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalvaluegold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/steptwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/process2"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTotal1"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="KEEP - 85 gram"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttontotal2"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="WEAR - 200 gram" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="Results :"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalvaluepayable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalvaluezakat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>