<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEB3B"
        android:orientation="vertical"
        android:paddingLeft="16dip"
        android:paddingRight="16dip">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="10sp"
            android:text="@string/title_home"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="193dp"
            android:layout_height="207dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true"
            android:layout_marginLeft="75dip"
            android:layout_marginTop="20dip"
            app:srcCompat="@drawable/logoapp"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="196dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonBegin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:text="START ESTIMATE" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mobile Tech. Assignment ICT602"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lect"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>