<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".AboutUsZakat">

    <TextView
        android:id="@+id/titleaboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="Developer Info"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linkgithub"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="Students' Information :"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/linkgithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleaboutus"
        android:layout_centerHorizontal="true"
        android:text="@string/hyperlink" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="159dp"
        android:layout_height="100dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/appdesc"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        app:srcCompat="@drawable/gformal2" />

    <TextView
        android:id="@+id/kimie"
        android:layout_width="363dp"
        android:layout_height="149dp"
        android:layout_below="@id/imageView"
        android:layout_alignRight="@id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="11dp"
        android:text="@string/kimie"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="154dp"
        android:layout_height="100dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="75dip"
        app:srcCompat="@drawable/hzq" />

    <TextView
        android:id="@+id/haziq"
        android:layout_width="291dp"
        android:layout_height="66dp"
        android:layout_below="@id/imageView2"
        android:layout_alignRight="@id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="53dp"
        android:text="@string/haziq"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>